syntax = "proto3";

package com.practicetest.grpc;

option java_multiple_files = true;
option java_package = "com.practicetest.grpc";

service GreetingService {
  rpc greeting(GreetingRequest) returns (GreetingResponse) {
  }
}

message GreetingRequest {
  string message = 1;
}

message GreetingResponse {
  string message = 1;
}